--- a/Ionic/EP/www/templates/register.html
+++ b/Ionic/EP/www/templates/register.html
@@ -19,7 +19,7 @@
       <div class="item item-divider">
         <div class="button primary"
                 ng-click="doRegistration(user)">
-          Log In
+          Registration
         </div>
         <div class="button primary"
                 ng-click="closeRegistration()">
