--- a/Ionic/EP/www/templates/upload.html
+++ b/Ionic/EP/www/templates/upload.html
@@ -97,7 +97,7 @@
             <input type="range"
                    ng-model="imageParams.widthImage"
                    min="5"
-                   ng-max="imageParams.maxWidth"
+                   input-ng-max="imageParams.maxWidth"
                    step="5"
                    id="width-slider"
                    ng-change="widthChange(imageParams.widthImage)">
