--- a/Ionic/EP/www/templates/pattern.html
+++ b/Ionic/EP/www/templates/pattern.html
@@ -34,7 +34,7 @@
           </div>
         </div>
         <div class="preview-container">
-          <img ng-src="{{address}}{{id}}.gif"
+          <img ng-src="{{srcImage}}"
                class="thumb imagePreview"
                zoom-in
                zoom-out
