Local Storage ionic.

--- a/Ionic/EP/www/templates/_myPattern.html
+++ b/Ionic/EP/www/templates/_myPattern.html
@@ -1,5 +1,6 @@
 <ion-view view-title="My Pattern">
   <ion-content>
+    <h1>My pattern</h1>
 
       <div class="card"
            ng-repeat="image in images">
