--- a/client/template/pattern.html
+++ b/client/template/pattern.html
@@ -9,7 +9,7 @@
          flex-gt-sm="30"
          flex-sm="100">
         <md-toolbar class="md-toolbar-tools md-primary"
-                    layout="column" layout-padding>
+                    layout="column">
             <div>DMC string</div>
             <div ng-show="$mdMedia('sm')||$mdMedia('xs')"
                        flex="100"
