--- a/client/css/main.css
+++ b/client/css/main.css
@@ -138,4 +138,19 @@ form .progress {
   padding-bottom: 0;
 }
 
+#home-image {
+  width: 100%;
+  height: auto;
+}
+
+#home-upload {
+  width: 250px;
+}
+
+#home-text {
+  line-height: 1.5;
+  padding: 8px;
+  font-size: 20px;
+}
+
 /*# sourceMappingURL=main.css.map */
