--- a/client/template/home.html
+++ b/client/template/home.html
@@ -1,3 +1,14 @@
-<div>
-    <h1>Home page</h1>
+<div layout="column"
+     layout-align="center center"
+     flex="100">
+    <img src="public/images/home-page.png" id="home-image">
+    <md-button id="home-upload"
+               class="md-raised md-primary">Upload Image
+    </md-button>
+    <p id="home-text">
+        Everyone is unique. Everyone should be able to easily create their own personal chart patterns. Designing should
+        be easy and fun.
+        Get inspired, start designing your own patterns, and create your own unique creations.
+        Create pattern became simple. Select your favorite photo, upload it and create it.
+    </p>
 </div>
