Home page. Deployment fixes

--- a/client/template/home.html
+++ b/client/template/home.html
@@ -3,7 +3,8 @@
      flex="100">
     <img src="public/images/home-page.png" id="home-image">
     <md-button id="home-upload"
-               class="md-raised md-primary">Upload Image
+               class="md-raised md-primary"
+               ui-sref="app.uploadImage">Upload Image
     </md-button>
     <p id="home-text">
         Everyone is unique. Everyone should be able to easily create their own personal chart patterns. Designing should
