--- a/Ionic/EP/www/templates/home.html
+++ b/Ionic/EP/www/templates/home.html
@@ -1,7 +1,15 @@
-<ion-view view-title="EP">
-  <ion-content>
-    <div>
-      <h1 class="header">Home page</h1>
-    </div>
+<ion-view view-title="Home Page">
+  <ion-content padding="true">
+    <img ng-src="img/home-page.png" id="home-image">
+    <md-button id="home-upload"
+               class="button button-block primary"
+               ui-sref="app.uploadImage">Upload Image
+    </md-button>
+    <p id="home-text">
+      Everyone is unique. Everyone should be able to easily create their own personal chart patterns. Designing should
+      be easy and fun.
+      Get inspired, start designing your own patterns, and create your own unique creations.
+      Create pattern became simple. Select your favorite photo, upload it and create it.
+    </p>
   </ion-content>
 </ion-view>
