--- a/client/template/home.html
+++ b/client/template/home.html
@@ -1,7 +1,7 @@
 <div layout="column"
      layout-align="center center"
      flex="100">
-    <img src="public/images/home-page.png" id="home-image">
+    <img src="public/images/example.png" id="home-image">
     <md-button id="home-upload"
                class="md-raised md-primary"
                ui-sref="app.uploadImage">Upload Image
